--- a/AdfenixTestExamApp.Core/AdfenixTestExamApp.Core.csproj
+++ b/AdfenixTestExamApp.Core/AdfenixTestExamApp.Core.csproj
@@ -6,15 +6,14 @@
     <ProductVersion>9.0.20706</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{C86118D7-451E-4933-BFEE-A1EFDB162FD7};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{5D646F5F-69CE-4117-9A9D-47E5D56D3C97}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3771D08F-C74D-4BFB-A6D6-571542FC52BA}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdfenixTestExamApp</RootNamespace>
-    <AssemblyName>AdfenixTestExamApp</AssemblyName>
+    <RootNamespace>AdfenixTestExamApp.Core</RootNamespace>
+    <AssemblyName>AdfenixTestExamApp.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <UseVSHostingProcess>false</UseVSHostingProcess>
-    <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
     <StarcounterVersionCompatibility>2.4</StarcounterVersionCompatibility>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
@@ -26,8 +25,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
@@ -38,8 +35,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <Prefer32Bit>false</Prefer32Bit>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
@@ -62,73 +57,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DataTransferObject\TrendPocoItem.cs" />
+    <Compile Include="IServices\ICorporationService.cs" />
+    <Compile Include="IServices\IFranchiseService.cs" />
+    <Compile Include="IServices\IHomeService.cs" />
+    <Compile Include="IServices\ISaleService.cs" />
+    <Compile Include="IServices\ITrendCalculationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouteHandler\IRouteHandler.cs" />
-    <Compile Include="RouteHandler\RouteHandler.cs" />
-    <Compile Include="RouteHandler\SubRoute\CorporateRouteHandler.cs" />
-    <Compile Include="RouteHandler\SubRoute\FranchiseRouteHandler.cs" />
-    <Compile Include="RouteHandler\SubRoute\ICorporateRouteHandler.cs" />
-    <Compile Include="RouteHandler\SubRoute\IFranchiseRouteHandler.cs" />
-    <Compile Include="ViewEntities\CorporationCreate.json.cs">
-      <DependentUpon>CorporationCreate.json</DependentUpon>
-    </Compile>
-    <Compile Include="ViewEntities\CorporationList.json.cs">
-      <DependentUpon>CorporationList.json</DependentUpon>
-    </Compile>
-    <Compile Include="ViewEntities\FranchiseDetails.json.cs">
-      <DependentUpon>FranchiseDetails.json</DependentUpon>
-    </Compile>
-    <Compile Include="ViewEntities\FranchiseList.json.cs">
-      <DependentUpon>FranchiseList.json</DependentUpon>
-    </Compile>
-    <Compile Include="ViewEntities\SalesList.json.cs">
-      <DependentUpon>SalesList.json</DependentUpon>
-    </Compile>
+    <Compile Include="Services\CorporationService.cs" />
+    <Compile Include="Services\FranchiseService.cs" />
+    <Compile Include="Services\HomeService.cs" />
+    <Compile Include="Services\SaleService.cs" />
+    <Compile Include="Services\TrendCalculationService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\AdfenixTestExamApp\css\" />
-    <Folder Include="wwwroot\AdfenixTestExamApp\images\" />
-    <Folder Include="wwwroot\AdfenixTestExamApp\scripts\" />
-  </ItemGroup>
-  <ItemGroup>
-    <TypedJSON Include="ViewEntities\CorporationCreate.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
-  </ItemGroup>
-  <ItemGroup>
-    <TypedJSON Include="ViewEntities\FranchiseDetails.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
-    <TypedJSON Include="ViewEntities\FranchiseList.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
-    <TypedJSON Include="ViewEntities\CorporationList.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AdfenixTestExamApp.Core\AdfenixTestExamApp.Core.csproj">
-      <Project>{3771d08f-c74d-4bfb-a6d6-571542fc52ba}</Project>
-      <Name>AdfenixTestExamApp.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AdfenixTestExamApp.DataAccess\AdfenixTestExamApp.DataAccess.csproj">
       <Project>{e3b33c6c-bf11-4968-b7b7-addf11771634}</Project>
       <Name>AdfenixTestExamApp.DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="wwwroot\AdfenixTestExamApp\views\CorporationCreate.html" />
-    <Content Include="wwwroot\AdfenixTestExamApp\views\CorporationList.html" />
-    <Content Include="wwwroot\AdfenixTestExamApp\views\FranchiseDetails.html" />
-    <Content Include="wwwroot\AdfenixTestExamApp\views\FranchiseList.html" />
-    <Content Include="wwwroot\AdfenixTestExamApp\views\SalesList.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <TypedJSON Include="ViewEntities\SalesList.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
